Modified different views, added registartion and login page. Mongo support now in place. Basic test queries being used. Need to finalize Ajax calls to properly establish registration and login.

--- a/app/css/base.scss
+++ b/app/css/base.scss
@@ -18,3 +18,11 @@ $font-stack:    Helvetica, sans-serif;
     		    color: antiquewhite;
     	}
     }
+
+.central-box{
+
+	background-color : rosybrown;
+	padding: 1em;
+
+
+}
