--- a/app/views/partials/nav.ejs
+++ b/app/views/partials/nav.ejs
@@ -13,7 +13,7 @@
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	     
 	      <ul class="nav navbar-nav" data-bind="foreach: listItems">
-			    <li><a data-bind="attr: { href: linkTarget} ,text : linkText"></a></li>
+			    <li><a data-bind="text : linkText , attr: { href: linkTarget} "></a></li>
 			</ul>
 	      <form class="navbar-form navbar-left">
 	        <div class="form-group">
